--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.15.16",
+    "@supabase/supabase-js": "^2.44.0",
     "axios": "^1.6.8",
     "moment": "^2.30.1",
     "react": "^18.2.0",
